--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
     "primeicons": "^7.0.0",
     "primeng": "^18.0.2",
     "rxjs": "~7.8.0",
     "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -39,6 +41,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^18.18.0",
+    "@types/nodemailer": "^6.4.17",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
