--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
     "bcryptjs": "^3.0.2",
+    "cropperjs": "^2.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
