--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "ngx-image-cropper": "^9.1.5",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
     "primeicons": "^7.0.0",
@@ -43,6 +44,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^18.18.0",
     "@types/nodemailer": "^6.4.17",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -50,6 +52,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "open": "^10.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.5.2"
   }
 }
